--- a/.github/workflows/dev_ci.yml
+++ b/.github/workflows/dev_ci.yml
@@ -1,31 +1,49 @@
-name: CI
+---
+name: Python CI for market-beacon
 
 on:
   push:
-    branches-ignore:
-      - main
-      - dev
+    branches: ["main"]
   pull_request:
-    branches-ignore:
-      - main
-      - dev
+    branches: ["main"]
+
+permissions:
+  contents: read
 
 jobs:
-  test:
+  build_and_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
-          make venv
-          make install-dev
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
 
-      - name: Run tests
-        run: make tests
+      - name: Lint and Format Check with Ruff
+        run: |
+          ruff check .
+          ruff format . --check
+
+      - name: Run tests with Pytest
+        run: |
+          pytest --cov=src --cov-report=xml
