--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,72 @@
-# Ignore everything
-/*
+# Byte-compiled / optimized / C extensions
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Whitelist specific folders
-!/tests/
-!/src/
-!/.github/
+# C extensions
+*.so
 
-# Whitelist specific files
-!/.gitignore
-!/.flake8
-!/.pre-commit-config.yaml
-!/CODE_VERSION.cfg
-!/entrypoint.sh
-!/Makefile
-!/pyproject.toml
-!/README.md
-!/requirements.txt
-!/Dockerfile
-!/.dockerignore
-!/setup.py
-!/run.py
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+.pytest_cache
+.ruff_cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Environments
+.env
+.venv
+.market-beacon-venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE settings
+.idea/
+.vscode/
+*.iml
+
+# Other
+.DS_Store
