--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ build-backend = "setuptools.build_meta"
 # ==============================================================================
 [project]
 name = "market-beacon"
-dynamic = ["version"]
+version = "0.0.0"
 description = "A Python bot to retrieve and analyze trade data from the Bitget exchange."
 authors = [
     { name = "David Young", email = "davidsamuelyoung@protonmail.com" },
@@ -31,15 +31,18 @@ classifiers = [
 dependencies = [
     "loguru>=0.7.2",
     "requests>=2.31.0",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "bump-pydantic==0.5.0",
+    "bump-my-version>=1.2.0",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.5.0",
     "pre-commit>=3.6.0",
+    "types-requests",
 ]
 
 [project.urls]
@@ -56,30 +59,42 @@ Repository = "https://github.com/the-user-created/market-beacon"
 [tool.ruff]
 line-length = 100
 target-version = "py312"
-src = ["src"]
+src = ["src", "tests"]
 
 [tool.ruff.lint]
-select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
+select = [
+    "E", "W", "F",  # pycodestyle, Pyflakes
+    "I",            # isort
+    "B",            # flake8-bugbear
+    "C4",           # flake8-comprehensions
+    "N",            # pep8-naming
+    "PT",           # flake8-pytest-style
+    "SIM",          # flake8-simplify
+    "UP",           # pyupgrade
+    "RUF",          # Ruff-specific rules
+]
 
 [tool.ruff.format]
 quote-style = "double"
 skip-magic-trailing-comma = false
 
-# ------------------------------ bump-pydantic ---------------------------------
+# ------------------------------ Bump My Version -------------------------------
 [tool.bumpversion]
-current_version = "0.0.0"
 commit = true
 tag = true
 message = "chore(version): Bump version to {new_version}"
 
 [[tool.bumpversion.files]]
-filename = "CODE_VERSION.cfg"
-
-[[tool.bumpversion.files]]
 filename = "pyproject.toml"
-search = 'current_version = "{current_version}"'
-replace = 'current_version = "{new_version}"'
+search = 'version = "{current_version}"'
+replace = 'version = "{new_version}"'
 
 # ------------------------------ setuptools ------------------------------------
 [tool.setuptools.packages.find]
 where = ["src"]
+
+# --------------------------------- Codespell ----------------------------------
+[tool.codespell]
+skip = "*.lock,*.json,*.svg"
+ignore-words-list = "sur,alo,larg,gam,hig"
+quiet-level = 2
