--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,16 +35,6 @@ dependencies = [
     "pydantic-settings>=2.1.0",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "bump-my-version>=1.2.0",
-    "pytest>=8.0.0",
-    "pytest-cov>=4.1.0",
-    "ruff>=0.5.0",
-    "pre-commit>=3.6.0",
-    "types-requests",
-]
-
 [project.urls]
 Homepage = "https://github.com/the-user-created/market-beacon"
 Issues = "https://github.com/the-user-created/market-beacon/issues"
@@ -55,6 +45,18 @@ Repository = "https://github.com/the-user-created/market-beacon"
 #                                 Tools
 # ==============================================================================
 
+# ---------------------------- Dependency Groups -------------------------------
+[dependency-groups]
+dev = [
+    "bump-my-version>=1.2.0",
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "ruff>=0.5.0",
+    "pre-commit>=3.6.0",
+    "types-requests",
+]
+
+
 # --------------------------------- Ruff ---------------------------------------
 [tool.ruff]
 line-length = 100
@@ -63,15 +65,15 @@ src = ["src", "tests"]
 
 [tool.ruff.lint]
 select = [
-    "E", "W", "F",  # pycodestyle, Pyflakes
-    "I",            # isort
-    "B",            # flake8-bugbear
-    "C4",           # flake8-comprehensions
-    "N",            # pep8-naming
-    "PT",           # flake8-pytest-style
-    "SIM",          # flake8-simplify
-    "UP",           # pyupgrade
-    "RUF",          # Ruff-specific rules
+    "E", "W", "F", # pycodestyle, Pyflakes
+    "I", # isort
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "N", # pep8-naming
+    "PT", # flake8-pytest-style
+    "SIM", # flake8-simplify
+    "UP", # pyupgrade
+    "RUF", # Ruff-specific rules
 ]
 
 [tool.ruff.format]
