fix: update labeler configuration to specify commitish branch

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -20,5 +20,6 @@ jobs:
         with:
           disable-releaser: true
           config-name: release-drafter.yml
+          commitish: main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
