--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,18 +1,18 @@
----
 name: Labeler
 
 on:
   pull_request_target:
-    types: [opened, edited, synchronize]
+    types: [opened, reopened, edited, synchronize]
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
 
 jobs:
   label:
     name: Auto-label PRs
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-      issues: write
     steps:
       - name: Label PR based on title
         uses: release-drafter/release-drafter@v6.1.0
