--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,8 +1,9 @@
-name: Labeler
+---
+name: PR Labeler
 
 on:
   pull_request_target:
-    types: [opened, reopened, edited, synchronize]
+    types: [opened, edited, synchronize, reopened]
 
 permissions:
   contents: read
@@ -13,7 +14,14 @@ jobs:
   label:
     name: Auto-label PRs
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
+      - name: Checkout repository for config
+        uses: actions/checkout@v4
+
       - name: Label PR based on title
         uses: release-drafter/release-drafter@v6.1.0
         with:
