--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -3,12 +3,7 @@ name: PR Labeler
 
 on:
   pull_request_target:
-    types: [opened, edited, synchronize, reopened]
-
-permissions:
-  contents: read
-  pull-requests: write
-  issues: write
+    types: [opened, edited, synchronize]
 
 jobs:
   label:
@@ -19,9 +14,6 @@ jobs:
       pull-requests: write
       issues: write
     steps:
-      - name: Checkout repository for config
-        uses: actions/checkout@v4
-
       - name: Label PR based on title
         uses: release-drafter/release-drafter@v6.1.0
         with:
