--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "python-dateutil>=2.8.2"
 ]
 
 [project.urls]
