--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,10 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    "python-dateutil>=2.8.2"
+    "python-dateutil>=2.8.2",
+    "pandas>=2.3.1",
+    "numpy>=2.3.1",
+    "ta>=0.11.0",
 ]
 
 [project.urls]
