--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "python-dateutil>=2.8.2",
     "pandas>=2.3.1",
     "numpy>=2.3.1",
-    "ta>=0.11.0",
+    "ta-lib>=0.6.4",
 ]
 
 [project.urls]
